Fix launcher