@@ -67,11 +67,6 @@ SYS_PROPS+=" -Dkarnakpassword='$KARNAK_LOGIN_PASSWORD'"
 #  SYS_PROPS+=" -Dspring.security.oauth2.client.provider.keycloak.issuer-uri='$OIDC_ISSUER_URI'"
 #fi
 
-# Only for HUG: do not set to open source
-SYS_PROPS+=" -Dspring.security.oauth2.client.registration.keycloak.client-id='$OIDC_CLIENT_ID'"
-SYS_PROPS+=" -Dspring.security.oauth2.client.registration.keycloak.client-secret='$OIDC_CLIENT_SECRET'"
-SYS_PROPS+=" -Dspring.security.oauth2.client.provider.keycloak.issuer-uri='$OIDC_ISSUER_URI'"
-
 ########################
 # DATABASE ENVIRONMENT #
 ########################
@@ -90,13 +85,9 @@ SYS_PROPS+=" -Dspring.datasource.username=$DB_USER"
 SYS_PROPS+=" -Dspring.datasource.password=$DB_PASSWORD"
 SYS_PROPS+=" -Dspring.datasource.url=$DB_URL"
 
-# https://docs.hazelcast.org/docs/4.1/manual/html-single/index.html#running-in-modular-java
-# Hazelcast needs the java.se module and access to the following Java packages for a proper work
-SYS_PROPS+=" --add-modules java.se --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.management/sun.management=ALL-UNNAMED --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED"
-
 if [[ -v LOGBACK_CONFIGURATION_FILE ]]
 then
   SYS_PROPS+=" -Dlogging.config=$LOGBACK_CONFIGURATION_FILE"
 fi
 
-eval java "$SYS_PROPS" org.springframework.boot.loader.JarLauncher
+eval java "$SYS_PROPS" org.springframework.boot.loader.launch.JarLauncher
